feat: add activity comment management
